# Memoria-FDA

./: .gitignore  README.md  VARIANTES.md
memoria_cofigo/: CMakeLists.txt  FDA_depth_k.cpp  FDA_depth_k_rand.cpp  FDA_vol_k.cpp  FDA_vol_k_rand.cpp  FD_base.cpp  README.md  fda_bridge_common.cpp  fda_bridge_common.h  fda_bridge_ibex.cpp  fda_experimentos.cpp  ibex_opt_base.cpp  ibex_opt_full.cpp  mini_ibexsolve.cpp  run_base_main.cpp  run_depth_k_main.cpp  run_depth_k_rand_main.cpp  run_menu.cpp  run_vol_k_main.cpp  run_vol_k_rand_main.cpp  temp_buffer.cpp  temp_buffer.h  temp_heap.cpp  temp_heap.h
memoria_cofigo/casos/hard/: chem-1.cov  chem-1.cov~  ex6_1_3.cov  ex6_1_3.cov~  ex6_2_10.cov  ex6_2_10.cov~  ex8_5_1bis.cov  ex8_5_1bis.cov~  sambal.cov  sambal.cov~
memoria_cofigo/casos/medium/: alkyl.cov  alkyl.cov~  alkylbis.cov  alkylbis.cov~  bearing.cov  bearing.cov~  ex14_2_3.cov  ex14_2_3.cov~  ex14_2_7.cov  ex14_2_7.cov~  ex2_1_7.cov  ex2_1_7.cov~  ex2_1_8.cov  ex2_1_8.cov~  ex2_1_9.cov  ex2_1_9.cov~  ex2_1_9fact.cov  ex2_1_9fact.cov~  ex5_2_2_case3.cov  ex5_2_2_case3.cov~  ex5_3_2.cov  ex5_3_2.cov~  ex6_1_3bis.cov  ex6_1_3bis.cov~  ex6_1_4.cov  ex6_1_4.cov~  ex6_2_11.cov  ex6_2_11.cov~  ex6_2_12.cov  ex6_2_12.cov~  ex6_2_14.cov  ex6_2_14.cov~  ex6_2_6.cov  ex6_2_6.cov~  ex6_2_8.cov  ex6_2_8.cov~  ex6_2_9.cov  ex6_2_9.cov~  ex7_3_4.cov~  ex7_3_4bis.cov  (+15 more)
memoria_cofigo/demo/: CMakeLists.txt  README_demo.txt
memoria_cofigo/export_variantes/: FDA_depth_k.cpp  FDA_depth_k_rand.cpp  FDA_vol_k.cpp  FDA_vol_k_rand.cpp  FD_base.cpp
memoria_cofigo/ibex_cell/: ibex_Cell.cpp  ibex_Cell.h
memoria_cofigo/ibex_local/: ibex_Cell.cpp
